; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/locale/extr_wcsnrtombs.c_wcsnrtombs.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/locale/extr_wcsnrtombs.c_wcsnrtombs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @wcsnrtombs(i8* noalias %0, i32** noalias %1, i64 %2, i64 %3, i32* noalias %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32*, align 8
  store i8* %0, i8** %6, align 8
  store i32** %1, i32*** %7, align 8
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  store i32* %4, i32** %10, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = load i32**, i32*** %7, align 8
  %13 = load i64, i64* %8, align 8
  %14 = load i64, i64* %9, align 8
  %15 = load i32*, i32** %10, align 8
  %16 = call i32 (...) @__get_locale()
  %17 = call i64 @wcsnrtombs_l(i8* %11, i32** %12, i64 %13, i64 %14, i32* %15, i32 %16)
  ret i64 %17
}

declare dso_local i64 @wcsnrtombs_l(i8*, i32**, i64, i64, i32*, i32) #1

declare dso_local i32 @__get_locale(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
